tests/rosetta/out/C/checkpoint-synchronization-2.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:02Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:02Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static int nAssemblies = 3;

const char *lower(char *ch) {
  const char *upper = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
  const char *lower = "abcdefghijklmnopqrstuvwxyz";
  int i = 0;
  while ((i < upper.len)) {
    if ((ch == slice_string(upper, i, i + 1))) {
      return slice_string(lower, i, i + 1);
    }
    i = i + 1;
  }
  return ch;
}

int main() {
  list_string partList = list_string_create(4);
  partList.data[0] = "A";
  partList.data[1] = "B";
  partList.data[2] = "C";
  partList.data[3] = "D";
  int partList = partList;
  for (int cycle = 1; cycle < (nAssemblies + 1); cycle++) {
    char *tmp1 = _str(cycle);
    char *tmp2 = concat_string("begin assembly cycle ", tmp1);
    printf("%s\n", tmp2);
    const char *a = "";
    for (int tmp3 = 0; tmp3 < partList.len; tmp3++) {
      char *p = partList.data[tmp3];
      char *tmp4 = concat_string(p, " worker begins part");
      printf("%s\n", tmp4);
      char *tmp5 = concat_string(p, " worker completed ");
      printf("%s\n", tmp5 + lower(p));
      a = a + lower(p);
    }
    char *tmp6 = concat_string(a, " assembled.  cycle ");
    char *tmp7 = _str(cycle);
    char *tmp8 = concat_string(tmp6, tmp7);
    char *tmp9 = concat_string(tmp8, " complete");
    printf("%s\n", tmp9);
  }
  return 0;
}
